<resources>
    <string name="app_name">CherryNote</string>
    <string name="textoEscandallos">Ingrese en los campos los valores asociados a los Kg según su calibre</string>
    <string name="txt30">30+</string>
    <string name="txt28">28+</string>
    <string name="txt26">26+</string>
    <string name="txt24">24+</string>
    <string name="btnCalcularEscandallo">CALCULAR</string>
    <string name="txtTotal">TOTAL :</string>
    <string name="txtTituloEscandallo">ESCANDALLO DEL DIA :</string>
    <string name="title_activity_login">Inicio de Sesión</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="txtTituloLogin">INICIO DE SESION</string>
    <string name="btnLogin">INICIAR SESIÖN</string>
    <string name="txtTituloPrecios">Inserte los precios por calibre e incluye el almacén al que pertenece</string>
    <string name="txt22">22+</string>
    <string name="btnIngresar">AÑADIR</string>
</resources>
